# farehawk

./: .env.example  .gitignore  package-lock.json  package.json
api/: Dockerfile  main.py  pyproject.toml
api/models/: requests.py  responses.py
api/routers/: compare.py  explore.py  insights.py  search.py
api/services/: compare.py  deal_score.py  destinations.py  explore.py  flight_search.py  nearby_airports.py  weekends.py
app/: package.json
app/.claude/: launch.json
app/public/: manifest.json
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(app)/: layout.tsx
app/src/app/(app)/admin/: page.tsx
app/src/app/blog/: page.tsx
app/src/app/pricing/: page.tsx
app/src/app/privacy/: page.tsx
app/src/app/terms/: page.tsx
app/src/app/waitlist/: page.tsx
app/src/components/layout/: BottomTabBar.tsx  Navbar.tsx
app/src/components/search/: AirportAutocomplete.tsx  CompareModal.tsx  DealScoreBadge.tsx  FlightCard.tsx  FlightResultsList.tsx  NearbyAirportComparison.tsx  SearchForm.tsx  TripSummary.tsx
app/src/components/ui/: loading-bar.tsx
app/src/hooks/: useCurrency.ts  useSubscription.ts  useTheme.ts  useTripBuilder.ts
app/src/lib/: admin.ts  airlines.ts  airports.ts  constants.ts  currency.ts  google-flights-url.ts  nearby-airports.ts  notifications.ts  saved-trips.ts  search-history.ts  sidecar.ts  trip-builder.ts
app/src/types/: database.ts  flight.ts
supabase/: config.toml
supabase/functions/check-watches/: index.ts
supabase/migrations/: 001_initial_schema.sql  20260406000000_initial_schema.sql
(+32 files in other folders)
